--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
     <li>Abacaxi em rodelas (em calda ou natural) para a cobertura</li>
 </ul>
 
-    
+    <h3>Modo de Preparo</h3>
+<ol>
+   <li>No liquidificador, bata os ovos, o óleo e o suco de abacaxi.</li>
+   <li>Em uma tigela separada, misture a farinha, o açúcar e o fermento.</li>
+   <li>Adicione a mistura do liquidificador aos ingredientes secos e misture bem com um fouet ou colher.</li>
+   <li>Unte uma forma redonda com buraco no meio com manteiga e farinha.</li>
+   <li>No fundo da forma, distribua as rodelas de abacaxi e, por cima, coloque a massa.</li>
+   <li>Leve para assar em forno pré-aquecido a 180°C por cerca de 40 minutos. Faça o teste do palito para ver se está pronto.</li>
+</ol>
+
+<h3>Informações Adicionais</h3>
+
+<ul>
+   <li><strong>Rendimento:</strong> Aproximadamente 12 porções.</li>
+   <li><strong>Tempo de preparo:</strong> 15 minutos.</li>
+   <li><strong>Tempo de cozimento:</strong> 40 minutos.</li>
+   <li>Para um bolo ainda mais úmido, você pode regá-lo com a calda do abacaxi depois de assado.</li>
+   <li>Sirva com uma bola de sorvete de creme para um toque especial.</li>
+</ul>
+
 </body>
 </html>
