--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,41 +10,36 @@
     <h1>Bolo de Abacaxi</h1>
     <p>Estou fazendo minha 1° receita de bolo de abacaxi</p>
     <h1>Ingredientes</h1>
-    <ul>
-        <li>4 ovos</li>
-        <li>1 xícara de chá de açúcar</li>
-        <li>2 xícaras de chá de farinha de trigo</li>
-        <li>1 xícara de chá de suco de abacaxi (pode usar o da lata)</li>
-        <li>1/2 xícara de chá de óleo</li>
-        <li>1 colher de sopa de fermento em pó</li>
-        <li>Abacaxi em rodelas (em calda ou natural) para a cobertura</li>
-    </ul>
+<ul>
+    <li>4 ovos</li>
+    <li>1 xícara de chá de açúcar</li>
+    <li>2 xícaras de chá de farinha de trigo</li>
+    <li>1 xícara de chá de suco de abacaxi (pode usar o da lata)</li>
+    <li>1/2 xícara de chá de óleo</li>
+    <li>1 colher de sopa de fermento em pó</li>
+    <li>Abacaxi em rodelas (em calda ou natural) para a cobertura</li>
+</ul>
 
     <h3>Modo de Preparo</h3>
-    <ol>
-        <li>No liquidificador, bata os ovos, o óleo e o suco de abacaxi.</li>
-        <li>Em uma tigela separada, misture a farinha, o açúcar e o fermento.</li>
-        <li>Adicione a mistura do liquidificador aos ingredientes secos e misture bem com um fouet ou colher.</li>
-        <li>Unte uma forma redonda com buraco no meio com manteiga e farinha.</li>
-        <li>No fundo da forma, distribua as rodelas de abacaxi e, por cima, coloque a massa.</li>
-        <li>Leve para assar em forno pré-aquecido a 180°C por cerca de 40 minutos. Faça o teste do palito para ver se
-            está pronto.</li>
-    </ol>
+<ol>
+   <li>No liquidificador, bata os ovos, o óleo e o suco de abacaxi.</li>
+   <li>Em uma tigela separada, misture a farinha, o açúcar e o fermento.</li>
+   <li>Adicione a mistura do liquidificador aos ingredientes secos e misture bem com um fouet ou colher.</li>
+   <li>Unte uma forma redonda com buraco no meio com manteiga e farinha.</li>
+   <li>No fundo da forma, distribua as rodelas de abacaxi e, por cima, coloque a massa.</li>
+   <li>Leve para assar em forno pré-aquecido a 180°C por cerca de 40 minutos. Faça o teste do palito para ver se está pronto.</li>
+</ol>
 
-    <h3>Informações Adicionais</h3>
+<h3>Informações Adicionais</h3>
 
-    <ul>
-        <li><strong>Rendimento:</strong> Aproximadamente 12 porções.</li>
-        <li><strong>Tempo de preparo:</strong> 15 minutos.</li>
-        <li><strong>Tempo de cozimento:</strong> 40 minutos.</li>
-        <li>Para um bolo ainda mais úmido, você pode regá-lo com a calda do abacaxi depois de assado.</li>
-        <li>Sirva com uma bola de sorvete de creme para um toque especial.</li>
-    </ul>
-    <img src="imagembolo.jpg" alt="Imagem de um bolo cremoso">
-    <iframe src=560" height="315" src="https://www.youtube.com/embed/qf_tCJwp2pY?si=Z8S6sygZAusH-0E0"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
+<ul>
+   <li><strong>Rendimento:</strong> Aproximadamente 12 porções.</li>
+   <li><strong>Tempo de preparo:</strong> 15 minutos.</li>
+   <li><strong>Tempo de cozimento:</strong> 40 minutos.</li>
+   <li>Para um bolo ainda mais úmido, você pode regá-lo com a calda do abacaxi depois de assado.</li>
+   <li>Sirva com uma bola de sorvete de creme para um toque especial.</li>
+</ul>
+<img src="imagembolo.jpg" alt="Imagem de um bolo cremoso">
+
 </body>
-
 </html>
