--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
    <li>Sirva com uma bola de sorvete de creme para um toque especial.</li>
 </ul>
 <img src="imagembolo.jpg" alt="Imagem de um bolo cremoso">
-<div><iframe src="https://youtu.be/qf_tCJwp2pY?si=51rtYtFyMgrMqprf" frameborder="0"></iframe></div>
+<a href="<iframe src="https://youtu.be/qf_tCJwp2pY?si=51rtYtFyMgrMqprf" frameborder="0"></iframe>"></a>
 </body>
 </html>
