--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
         <li>Sirva com uma bola de sorvete de creme para um toque especial.</li>
     </ul>
     <img src="imagembolo.jpg" alt="Imagem de um bolo cremoso">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/qf_tCJwp2pY?si=51rtYtFyMgrMqprf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
-<iframe src="<iframe width=" 560" height="315" src="https://www.youtube.com/embed/qf_tCJwp2pY?si=51rtYtFyMgrMqprf"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
-
 </html>
